--- a/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Kategori/Index.cshtml
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Kategori/Index.cshtml
@@ -7,6 +7,7 @@
 
 <h1>Kategoriler</h1>
 @* th kalın punto td ince punto yazılıyor. *@
+@* DashBoard MVC *@
 <table class="table table-bordered">
     <tr>
         <th>KATEGORİ ID</th>
