--- a/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Kategori/Ekle.cshtml
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Kategori/Ekle.cshtml
@@ -14,7 +14,7 @@
     </div>
     <br />
 
-    <div>
+    <div  style="margin-top:15px">
         <button class="btn btn-primary" id="btn1" type="submit">Kategori Ekle</button>
     </div>
 </form>
