--- a/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Shared/Layout.cshtml
@@ -54,8 +54,8 @@ body {font-family: "Lato", sans-serif;}
         <a href="#"><i class="glyphicon glyphicon-th-list"></i>&nbsp; Kategoriler</a>
         <a href="/Kitap/Index/"><i class="glyphicon glyphicon-book"></i>&nbsp; Kitaplar</a>
         <a href="/Yazar/Index/"><i class="glyphicon glyphicon-pencil"></i>&nbsp; Yazarlar</a>
-        <a href="#"><i class="glyphicon glyphicon-user"></i>&nbsp; Kullanıcılar</a>
-        <a href="#"><i class="glyphicon glyphicon-credit-card"></i>&nbsp; Personeller</a>
+        <a href="/Uye/Index/"><i class="glyphicon glyphicon-user"></i>&nbsp; Üyeler</a>
+        <a href="/Personel/Index/"><i class="glyphicon glyphicon-credit-card"></i>&nbsp; Personeller</a>
         <a href="#"><i class="glyphicon glyphicon-circle-arrow-right"></i>&nbsp; Ödünç Kitap Ver</a>
         <a href="#"><i class="glyphicon glyphicon-circle-arrow-left"></i>&nbsp; Ödünç Kitap Al</a>
         <a href="#"><i class="glyphicon glyphicon-euro"></i>&nbsp; Kasa</a>
