--- a/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Odunc/Index.cshtml
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Odunc/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>Ödünç Kitap Listesi</h2>
-@using (Html.BeginForm("Index", "Kitap", FormMethod.Get))
+@using (Html.BeginForm("Index", "Odunc", FormMethod.Get))
 {
     <div style="margin-bottom:15px; margin-top:15px;">
         <b>Aranacak Kitap Adını Giriniz:</b>&nbsp @Html.TextBox("p")&nbsp
@@ -23,26 +23,26 @@
         <th>Personel</th>
         <th>Alış Tarihi</th>
         <th>İade Tarihi</th>
-        <th>Sil</th>
-        <th>Güncelle</th>
+        <th>İade Al</th>
     </tr>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>@item.ID</td>
-                <td>@item.TBL_KITAP.AD</td>
-                <td>@item.TBL_UYELER.AD&nbsp @item.TBL_UYELER.SOYAD</td>
-                <td>@item.PERSONEL</td>
-                <td>@item.ALISTARIH</td>
-                <td>@item.IADETARIH</td>
+        <tr>
+            <td>@item.ID</td>
+            <td>@item.TBL_KITAP.AD</td>
+            <td>@item.TBL_UYELER.AD&nbsp @item.TBL_UYELER.SOYAD</td>
+            <td>@item.TBL_PERSONEL.PERSONEL</td>
+            <td>@Convert.ToDateTime(@item.ALISTARIH).ToShortDateString()</td>
+            <td>@Convert.ToDateTime(@item.IADETARIH).ToString("dd/MM/yyyy")</td>
+            @*<td>@Convert.ToDateTime(@item.IADETARIH).ToString("dd/MMM/yyyy")</td>*@
 
-                <td><a href="/Odunc/OduncVer/@item.ID" class="btn btn-danger" style="background-color:#ffd800">Kitabı İade Et</a></td>
-                
-            </tr>
+            <td><a href="/Odunc/OduncIade/@item.ID" class="btn btn-default" style="background-color:mediumaquamarine;color:white">Kitabı İade Et</a></td>
+
+        </tr>
 
         }
     </tbody>
 </table>
-<a href="/Kitap/Ekle/" class="btn btn-primary">Yeni Kitap Ekle</a>
+@*<a href="/Odunc/OduncVer/" class="btn btn-primary">Ödünç Kitap Ver</a>*@
 
