--- a/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Kitap/Ekle.cshtml
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE/Views/Kitap/Ekle.cshtml
@@ -46,5 +46,6 @@
         <button type="submit" class="btn btn-primary">Kitap Ekle</button>
 
     </div>
+    <input type="hidden" name="Durum" value="True"/>
 </form>
 
